--- a/src/ui/settings/SettingsMenu.css
+++ b/src/ui/settings/SettingsMenu.css
@@ -13,6 +13,7 @@
 
 @media only screen and (max-width: 575px) {
     .settings-menu {
+        width: calc(100% - 1rem);
         margin-bottom: 1.5rem;
     }
 }
