--- a/src/ui/settings/SettingsTabs.css
+++ b/src/ui/settings/SettingsTabs.css
@@ -2,3 +2,10 @@
     grid-area: tabs;
     margin-bottom: 2rem;
 }
+
+@media only screen and (max-width: 575px) {
+    .settings-tabs {
+        padding-top: 1rem;
+        margin-bottom: 1.5rem;
+    }
+}
