Class names overlap.

--- a/src/ui/page/Page.css
+++ b/src/ui/page/Page.css
@@ -8,19 +8,19 @@
         margin: 0 auto;
     }
 
-    .left-pane {
+    .page-left-pane {
         grid-column: 1;
     }
 
-    .right-pane {
+    .page-right-pane {
         grid-column: 3;
     }
 
-    .central-pane {
+    .page-central-pane {
         grid-column: 2;
     }
 
-    .centralright-pane {
+    .page-centralright-pane {
         grid-column: 2 / 4;
     }
 }
@@ -33,19 +33,19 @@
         column-gap: 1rem;
     }
 
-    .left-pane {
+    .page-left-pane {
         grid-column: 1;
     }
 
-    .right-pane {
+    .page-right-pane {
         display: none;
     }
 
-    .central-pane {
+    .page-central-pane {
         grid-column: 2;
     }
 
-    .centralright-pane {
+    .page-centralright-pane {
         grid-column: 2;
     }
 }
@@ -55,11 +55,11 @@
         display: block;
     }
 
-    .left-pane {
+    .page-left-pane {
         display: none;
     }
 
-    .right-pane {
+    .page-right-pane {
         display: none;
     }
 }
