Simplify style for Settings > Removal chapter.

--- a/src/ui/control/Tabs.css
+++ b/src/ui/control/Tabs.css
@@ -2,6 +2,7 @@
     --nav-pills-link-hover-bg: var(--highlight-blue);
     --nav-pills-link-active-hover-bg: var(--bs-primary);
     --nav-link-arrow-color: var(--bs-nav-link-color);
+    --nav-link-active-arrow-color: var(--nav-link-arrow-color);
 }
 
 .nav.nav-tabs .nav-link, .nav.nav-pills .nav-link {
@@ -38,6 +39,10 @@
 
 .nav.nav-pills .nav-link .arrow-wrapper svg {
     color: var(--nav-link-arrow-color);
+}
+
+.nav.nav-pills .nav-link.active .arrow-wrapper svg {
+    color: var(--nav-link-active-arrow-color);
 }
 
 .nav.nav-tabs .nav-item, .nav.nav-pills .nav-item {
