No need to mark the current chapter on mobile.

--- a/src/ui/control/Tabs.css
+++ b/src/ui/control/Tabs.css
@@ -9,6 +9,10 @@
     cursor: pointer;
 }
 
+.nav.nav-tabs .nav-link.active {
+    cursor: default;
+}
+
 .nav.nav-pills .nav-link.active .principal {
     color: var(--bs-nav-pills-link-active-color);
 }
