Design updates in the profile editor.

--- a/src/ui/settings/profile/donate/DonateEditor.css
+++ b/src/ui/settings/profile/donate/DonateEditor.css
@@ -1,10 +1,7 @@
 .donate-editor .fundraiser, .donate-editor .new-fundraiser, .fundraiser-overlay {
-    border: 0;
-    border-radius: .9em;
-    padding: .25em .9em;
+    border-radius: 1em;
     margin-right: .5em;
     margin-bottom: .25em;
-    transition: background-color .15s ease-in-out;
 }
 
 .fundraiser-overlay {
@@ -15,20 +12,7 @@
     visibility: hidden;
 }
 
-.donate-editor .new-fundraiser {
-    background-color: var(--bs-blue-100);
-}
-
-.donate-editor .new-fundraiser:hover {
-    background-color: var(--bs-blue-200);
-}
-
-.donate-editor .fundraiser .icon {
-    font-size: .875em;
-    margin-left: .5em;
-}
-
 .donate-editor .new-fundraiser .icon {
-    font-size: .875em;
     margin-right: .5em;
+    vertical-align: -.15em;
 }
