--- a/src/ui/control/Button.css
+++ b/src/ui/control/Button.css
@@ -17,6 +17,24 @@
     --bs-btn-disabled-border-color: var(--bs-gray-100);
 }
 
+.btn-tool-round {
+    --bs-btn-color: var(--bs-gray-700);
+    --bs-btn-bg: var(--bs-gray-100);
+    --bs-btn-border-color: var(--bs-gray-100);
+    --bs-btn-hover-color: var(--bs-gray-900);
+    --bs-btn-hover-bg: var(--highlight);
+    --bs-btn-hover-border-color: var(--highlight);
+    --bs-btn-active-color: var(--bs-gray-900);
+    --bs-btn-active-bg: var(--highlight);
+    --bs-btn-active-border-color: var(--primary-600);
+    --bs-btn-disabled-color: var(--bs-gray-400);
+    --bs-btn-disabled-bg: var(--bs-gray-100);
+    --bs-btn-disabled-border-color: var(--bs-gray-100);
+    --bs-btn-border-radius: 50%;
+    --bs-btn-padding-x: .375em;
+    --bs-btn-padding-y: .25em;
+}
+
 .btn-silent {
     --bs-btn-color: var(--bs-gray-700);
     --bs-btn-bg: transparent;
@@ -46,6 +64,6 @@
     --bs-btn-disabled-bg: transparent;
     --bs-btn-disabled-border-color: transparent;
     --bs-btn-border-radius: 50%;
-    --bs-btn-padding-x: .375rem;
-    --bs-btn-padding-y: .375rem;
+    --bs-btn-padding-x: .375em;
+    --bs-btn-padding-y: .25em;
 }
