--- a/src/ui/page/MobileBack.css
+++ b/src/ui/page/MobileBack.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     gap: .25em;
-    height: 4.6rem;
-    padding: .5rem .25rem 2.5rem .25rem;
+    height: 4rem;
+    padding: .5rem .25rem;
     font-size: 1.4rem;
     line-height: 127%;
     color: var(--bs-gray-900);
