--- a/src/ui/settings/SettingsTabs.css
+++ b/src/ui/settings/SettingsTabs.css
@@ -6,6 +6,7 @@
 @media only screen and (max-width: 575px) {
     .settings-tabs {
         padding-top: 1rem;
+        padding-left: 1rem;
         margin-bottom: 1.5rem;
     }
 }
