--- a/src/ui/page/MobileBack.css
+++ b/src/ui/page/MobileBack.css
@@ -8,3 +8,19 @@
     line-height: 127%;
     color: var(--bs-gray-900);
 }
+
+.mobile-back.sticky {
+    position: sticky;
+    top: 0;
+    z-index: var(--zindex-page-header);
+    transition: box-shadow .2s ease;
+}
+
+.mobile-back.sticky.shadow {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .16);
+}
+
+.mobile-back-sentinel {
+    block-size: 1px;
+    margin-block-end: -1px;
+}
