--- a/src/ui/feed/TimelinePage.css
+++ b/src/ui/feed/TimelinePage.css
@@ -1,37 +1,74 @@
-.timeline-page .mobile-back {
+.timeline-page .back-box {
+    display: block;
+    position: sticky;
+    z-index: var(--zindex-page-header);
+}
+
+.timeline-page .back-box-inner {
+    border-radius: 1rem;
     background-color: white;
-    margin-bottom: 1rem;
+    transition: box-shadow .2s ease;
 }
 
-.timeline-page .desktop-back-box {
-    display: none;
-    background-color: var(--body-background);
-    padding-top: 1rem;
+.timeline-page .back-box-inner .underlined-tabs {
+    border-radius: 1rem;
 }
 
-.timeline-page .desktop-back {
-    margin-top: 0;
-}
-
-.timeline-page .desktop-back.shadow {
+.timeline-page .back-box-inner.back-box-shadow {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .16);
+    transition: box-shadow .2s ease;
 }
 
-.timeline-page .desktop-back-sentinel {
+.timeline-page .back-box-sentinel {
     block-size: 1px;
     margin-block-end: -1px;
 }
 
-@media only screen and (min-width: 576px) {
-    .timeline-page .desktop-back-box {
-        display: block;
-        position: sticky;
-        top: 2.7rem;
-        z-index: var(--zindex-page-header);
-        transition: box-shadow .2s ease;
+@media only screen and (max-width: 576px) {
+    .timeline-page .back-box {
+        top: 4rem;
+        margin-bottom: .75rem;
+    }
+
+    .timeline-page .back-box-inner {
+        border-radius: 0;
+    }
+
+    .timeline-page .back-box-inner .underlined-tabs {
+        border-radius: 0;
+        padding: 0 .25rem;
     }
 }
 
-.timeline-page .feed-top-box {
-    top: 6.7rem;
+@media only screen and (min-width: 576px) {
+    .timeline-page .back-box {
+        top: 2.7rem;
+        padding-top: 1rem;
+        background-color: var(--body-background);
+    }
+}
+
+.timeline-page .mobile-back {
+    background-color: white;
+}
+
+.timeline-page .mobile-back.mobile-back-shadow {
+    box-shadow: none;
+}
+
+.timeline-page .desktop-back {
+    margin-top: 0;
+    margin-bottom: -.5rem;
+}
+
+@media only screen and (max-width: 576px) {
+    .timeline-page .feed-top-box {
+        top: 6rem;
+    }
+}
+
+@media only screen and (min-width: 576px) {
+    .timeline-page .feed-top-box {
+        top: 9rem;
+    }
 }
