--- a/src/ui/page/MobileBack.css
+++ b/src/ui/page/MobileBack.css
@@ -16,8 +16,9 @@
     transition: box-shadow .2s ease;
 }
 
-.mobile-back.sticky.shadow {
+.mobile-back.sticky.mobile-back-shadow {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .16);
+    transition: box-shadow .2s ease;
 }
 
 .mobile-back-sentinel {
