New navigation on GrantPage and RemovalPage. New logo added to the package.

--- a/src/ui/complaints/ComplaintsListPage.css
+++ b/src/ui/complaints/ComplaintsListPage.css
@@ -9,16 +9,8 @@
     align-items: flex-end;
 }
 
-.complaints .navigator > .title {
-    font-family: var(--font-messages), sans-serif;
-    font-weight: 600;
-    font-size: 2rem;
-    line-height: 125%;
-    color: var(--bs-gray-900);
-}
-
 @media only screen and (max-width: 575px) {
-    .complaints .navigator > .title {
+    .complaints .navigator > .page-title {
         display: none;
     }
 }
