--- a/src/ui/page/Page.css
+++ b/src/ui/page/Page.css
@@ -73,3 +73,11 @@
         display: none;
     }
 }
+
+.page-title {
+    font-family: var(--font-messages), sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+    line-height: 125%;
+    color: var(--bs-gray-900);
+}
