--- a/src/ui/grant/GrantPage.css
+++ b/src/ui/grant/GrantPage.css
@@ -1,3 +1,11 @@
 .grant-page {
     font-size: 1.1rem;
 }
+
+@media only screen and (max-width: 575px) {
+    .grant-page {
+        padding-bottom: 3rem;
+        background-color: white;
+        min-height: 100vh;
+    }
+}
