Full-screen instants dialog on mobile.

--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -13,6 +13,17 @@
     font-size: .835rem;
 }
 
+@media only screen and (max-width: 575px) {
+    #instants {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: calc(100vh - 2.9rem);
+        background-color: white;
+    }
+}
+
 #instants .header {
     padding: 0 0 .8rem 0;
     border-bottom: 1px solid var(--bs-gray-100);
