--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -19,7 +19,6 @@
         top: 0;
         left: 0;
         width: 100vw;
-        height: calc(100vh - 2.9rem);
         background-color: white;
     }
 }
@@ -54,12 +53,19 @@
 }
 
 #instants > .footer {
+    height: 2.5rem;
     padding: .75rem .75rem 0 .75rem;
     margin-top: 1rem;
     margin-bottom: -.25rem;
     border-top: 1px solid var(--bs-gray-100);
     display: flex;
     justify-content: space-between;
+}
+
+@media only screen and (max-width: 575px) {
+    #instants > .footer {
+        margin-bottom: .3rem;
+    }
 }
 
 #instants .build-number {
@@ -84,6 +90,14 @@
     max-height: 70vh;
     overflow-y: auto;
     overscroll-behavior-y: none;
+}
+
+@media only screen and (max-width: 575px) {
+    #instants .content {
+        max-width: 100vw;
+        max-height: unset;
+        height: calc(100vh - 10.65rem);
+    }
 }
 
 #instants .content HR {
