Image for prohibited content.

--- a/src/ui/page/GooglePlayProhibitedPage.css
+++ b/src/ui/page/GooglePlayProhibitedPage.css
@@ -5,3 +5,23 @@
         min-height: 100vh;
     }
 }
+
+.google-play-prohibited-page .content-panel {
+    text-align: center;
+    padding: 2rem 0 6rem;
+}
+
+.google-play-prohibited-page .caption {
+    font-family: var(--font-messages), sans-serif;
+    font-weight: 600;
+    font-size: 2rem;
+    line-height: 125%;
+    color: var(--bs-gray-900);
+    margin-bottom: .25rem;
+}
+
+.google-play-prohibited-page .instructions {
+    font-weight: 400;
+    line-height: 150%;
+    color: var(--bs-gray-600);
+}
